# healthcare-data-rest

./: .gitattributes  .gitignore  Cargo.toml  README.md
.sqlx/: query-80be831043a1e99a432066c18416c902d49ae1b884ace520176ab93c1ac821d8.json  query-bf3fb6612eb1641f80b9acdb9cae3e1826a4226f073e0ee1b2490745bd710c9c.json
backend/: Cargo.toml
backend/src/: main.rs
common/: Cargo.toml
common/src/: args.rs  db.rs  engine.rs  lib.rs  model.rs  state.rs  traits.rs
loader/: Cargo.toml
loader/src/: main.rs
loader/src/loaders/: pos.rs
migrations/: 20260217190854_create_provider_address.sql  20260217195459_create_loader_runs.sql  20260217204720_create_providers.sql  20260217204851_add_address_unique_constraint.sql
