[package]
name = "loader"
version = "0.1.0"
edition = "2024"

[dependencies]
reqwest = { version = "0.11", features = ["blocking"] }
zip = "0.6"
anyhow = "1.0"
csv = "1.3"
tempfile = "3.10"
common = { path = "../common" }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
