[package]
name = "loader"
version = "0.1.0"
edition = "2024"

[dependencies]
reqwest = { version = "0.11", features = ["blocking"] }
zip = "0.6"
anyhow = "1.0"
csv = "1.3"
tempfile = "3.10"
common = { path = "../common" }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
sha2 = "0.10"
hex = "0.4"
clap = { version = "4.5", features = ["derive", "env"] }
dotenvy = "0.15"
tokio = { version = "1.0", features = ["full"] }
sqlx = { version = "0.8", features = ["macros", "migrate", "postgres", "runtime-tokio-rustls", "chrono", "uuid"] }
async-trait = "0.1.89"
